# EMNLP2025_Turnback

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt  setup.py
open_source_repo/: .gitattributes  CONTRIBUTING.md  Makefile  NOTICE.md  PUBLISHING.md  README.en.md  README.md  README.zh-CN.md  _config.yml  pyproject.toml
open_source_repo/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
open_source_repo/.github/ISSUE_TEMPLATE/: feature_request.md  question.md
open_source_repo/36kroutes/Auckland_New_Zealand/easy/0/: instructions.txt  route.geojson
open_source_repo/36kroutes/Auckland_New_Zealand/easy/10/: route.geojson
open_source_repo/36kroutes/Auckland_New_Zealand/easy/100/: instructions.txt  (+1 more)
open_source_repo/configs/: README.md  reproduction.first12.json  reproduction.first24.json
open_source_repo/docs/: _config.yml  index.md
open_source_repo/docs/en/: data.md  faq.md  modules.md  overview.md  quickstart.md  release.md  repository.md
open_source_repo/docs/zh/: data.md  faq.md  modules.md  overview.md  quickstart.md  release.md  repository.md
open_source_repo/scripts/: create_release_archive.sh  refresh_from_workspace.sh  smoke_release.sh
open_source_repo/src/path_builder/: cli.py  evaluation.py  geo.py  instructions.py  io.py  models.py  prompting.py  reproduction.py  similarity.py
open_source_repo/tests/: test_ceiling.py  test_cli.py  test_evaluation.py  test_execution.py  test_paper.py  test_similarity.py
(+79285 files in other folders)
